--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -114,6 +114,9 @@
         {% endfor %}
     </div>
 </section>
+<!-- end categories of month -->
+
+<!-- start featured products -->
 <section class="bg-light">
     <div class="container py-5">
         <div class="row text-center py-3">
