--- a/main/templates/shopSingle.html
+++ b/main/templates/shopSingle.html
@@ -167,7 +167,7 @@
                                             <li class="list-inline-item"><span class="btn btn-success btn-size">XL</span></li>
                                         </ul>
                                     </div>
-                                    <div class="col-auto">
+                                    <!-- <div class="col-auto">
                                         <ul class="list-inline pb-3">
                                             <li class="list-inline-item text-right">
                                                 Quantity
@@ -177,7 +177,7 @@
                                             <li class="list-inline-item"><span class="badge bg-secondary" id="var-value">1</span></li>
                                             <li class="list-inline-item"><span class="btn btn-success" id="btn-plus">+</span></li>
                                         </ul>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="row pb-3">
                                     <div class="col d-grid">
